<resources>
    <string name="app_name">Pruebas Gluo</string>
    <string name="title_test_detail">Test Detail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Generales para fragmentos -->
    <string name="fragment_unimplemented">Test unimplemented</string>
    <string name="fragment_title">Test fragment: </string>

    <!-- Location Test-->
    <string name="btn_find_coordinates">Print Coordinates</string>
    <string name="location_latitud">Latitud</string>
    <string name="location_longitud">Longitud</string>
    <string name="location_precision">Precisión</string>
    <string name="location_altitud">Altitud</string>
    <string name="no_address_found">Sorry, no address found</string>
    <string name="no_location_data_provided">No location data provided</string>
    <string name="service_not_available">Sorry, the service is not available</string>
    <string name="invalid_lat_long_used">Invalid latitude or longitude used</string>
    <string name="address_found">Address found!</string>

    <!-- Misc -->
    <string name="misc_test">Prueba</string>
</resources>
