<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context="com.gluo.pruebas.test1.LocationFragment"
    android:paddingTop="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fragment_title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/test_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/misc_test" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_find_coordinates"
        android:id="@+id/printCoordinates"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_latitud"
            android:layout_gravity="start"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/misc_test"
            android:id="@+id/latitud" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_longitud"
            android:layout_gravity="start"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/misc_test"
            android:id="@+id/longitud" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_precision"
            android:layout_gravity="start"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/misc_test"
            android:id="@+id/precision" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:visibility="gone">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/location_altitud"
            android:layout_gravity="start"
            android:textStyle="bold" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/misc_test"
            android:id="@+id/altitud" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/misc_test"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:id="@+id/address"
        android:paddingTop="30dp" />

</LinearLayout>
